--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Our Team</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -20,9 +21,8 @@
           varius ante. Sed quis luctus eros. Phasellus rutrum laoreet leo in
           consequat.
         </p>
-        <div class="team-container">
-          <!-- Inseriamo inizialmente una card statica per stilarla e vedere l'effetto finale -->
-
+        <div id="team-container">
+          
           <div class="team-card">
             <div class="card-image">
               <img
